# goit-pythonweb-hw-12

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  test.db
docs/: conf.py  index.rst
migrations/versions/: 1c48682c9e5e_add_refresh_token_column_to_users.py  8a61a02ef593_init.py  b0a26d1ed72c_add_filed_confirmed_to_the_user_model.py  da35035c39c8_add_user_role.py
src/: redis.py  schemas.py
src/api/: auth.py  contacts.py  users.py  utils.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/services/: auth.py  contacts.py  email.py  upload_file.py  users.py
src/services/templates/: new_password.html  reset_password.html  verify_email.html
tests/: conftest.py  test_contacts_repository_unit.py  test_integration_auth.py  test_integration_contacts.py  test_integration_users.py  test_integration_utils.py  test_redis.py  test_users_repository_unit.py
